[package]
name = "seigr_hive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.24.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
futures-io = "0.3.30"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.8.8"
ring = "0.17.7"
rand = "0.8.5"
blake2 = "0.10.6"
hex = "0.4.3"
generic-array = "0.14.4"
typenum = "1.14.0"
rayon = "1.8.0"
bcrypt = "0.15.0"